--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://trirpi.github.io/blog
+baseURL: https://trirpi.github.io/blog/
 languageCode: en-us
 title: Tristan Trouwen
 theme: mini
